(feat) add accordion with as many spots as number of stops

--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -22,9 +22,14 @@
       <input id="end" type="text" class="form-control" placeholder="Enter end point" ng-model="endInput" />
       <!-- <select class="form-control" ng-model ="selectedOption" ng-options="n for n in route.stopOptions" >
       </select> -->
-      <label for='numStops'>Number of stops</label>
-      <select id='numStops' class="form-control selectpicker" ng-model ="route.numStops" ng-options="n for n in route.stopOptions">
+      <label for='numStops'>Number of stops: </label>
+      <select id='numStops' class="form-control selectpicker" ng-init="route.numStops = 0" ng-model ="route.numStops" ng-options="n for n in route.stopOptions">
       </select>
+      <uib-accordion>
+        <uib-accordion-group heading="Customize Stops">
+          <div ng-repeat="t in getTimes(route.numStops) track by $index">Test</div>
+        </uib-accordion-group>
+      </uib-accordion>
       <button id="search-btn" class="btn btn-default" ng-click="getRoute()">Get Stops
       </button>
     </div>
