(feat) created a share function to send user route to popular routes

--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -63,6 +63,7 @@
     </div>
     <div class="col-xs-4 centered">
       <button class="saved-route-link btn" ng-click="viewSavedRoute(route.hash)">View this Route</button>
+      <button class="saved-route-link btn" ng-click="shareRoute(route.hash)">Share this route</button>
     </div>
   </div>
 </div>
