--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -35,6 +35,7 @@
   <!-- Map -->
   <div class="col-xs-8">
     <div id="map"></div>
+    <p>*Markers are draggable</p>
   </div>
   <!-- Stops -->
   <h3 class="col-xs-4 infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Your Stops</h3>
