--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -69,8 +69,8 @@
 </div>
 <!-- Saved routes -->
 <div class="col-xs-6 savedRoutes">
-  <h3 class="infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Saved Routes</h3>
-  <div class="row info save-routes" ng-repeat="route in savedRoutes">
+  <h3 class="infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Popular Routes</h3>
+  <div class="row info save-routes" ng-repeat="route in popularRoutes">
     <div class="col-xs-4">
       <p class="route-start">From: {{ route.startPoint }}</p>
       <p class="route-end">To: {{ route.endPoint }}</p>
