--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -79,6 +79,7 @@
     <div class="col-xs-4 centered">
       <button class="saved-route-link btn" ng-click="viewSavedRoute(route.hash)">View this Route</button>
       <button class="saved-route-link btn" ng-click="shareRoute(route.hash)">Share this route</button>
+      <button class="saved-route-link btn" ng-click="deleteRoute(route.hash)">Delete this route</button>
     </div>
   </div>
 </div>
