(feat) ungated homepage, allowing users to use basic functionality without signing in

--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -96,7 +96,7 @@
       <div class="stop-count">{{route.wayPoints.length/2}} stop<span ng-if="route.wayPoints.length > 2">s</span></div>
     </div>
     <div class="col-xs-4 centered">
-      <button class="saved-route-link btn" ng-click="viewSavedRoute(route.hash)">View this Route</button>
+      <button class="saved-route-link btn" ng-click="viewPopularRoute(route.hash)">View this Route</button>
     </div>
   </div>
 </div>
