--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -50,7 +50,7 @@
   <div class="col-xs-8">
     <div id="map"></div>
     <p>*Markers are draggable</p>
-    <a href="#/signin">*Sign in to save routes</a>
+    <a ui-sref="signin">*Sign in to save routes</a>
   </div>
   <!-- Stops -->
   <h3 class="col-xs-4 infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Your Stops</h3>
