--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -66,38 +66,40 @@
 </div>
 
 <!-- User routes -->
-<div class="col-xs-6 savedRoutes">
-  <h3 class="infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>User Routes</h3>
-  <div class="row info save-routes" ng-repeat="route in savedRoutes">
-    <div class="col-xs-4">
-      <p class="route-start">From: {{ route.startPoint }}</p>
-      <p class="route-end">To: {{ route.endPoint }}</p>
-    </div>
-    <div class="col-xs-4">
-      <!-- <div class="stop-count">Number of stops: <br /> {{ route.wayPoints.length/2 }}</div> -->
-      <div class="stop-count">{{route.wayPoints.length/2}} stop<span ng-if="route.wayPoints.length > 2">s</span></div>
-    </div>
-    <div class="col-xs-4 centered">
-      <button class="saved-route-link btn" ng-click="viewSavedRoute(route.hash)">View this Route</button>
-      <button class="saved-route-link btn" ng-click="shareRoute(route.hash)">Share this route</button>
-      <button class="saved-route-link btn" ng-click="deleteRoute(route.hash)">Delete this route</button>
+<div class="row">
+  <div class="col-xs-6">
+    <h3 class="infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>User Routes</h3>
+    <div class="row info save-routes" ng-repeat="route in savedRoutes">
+      <div class="col-xs-4">
+        <p class="route-start">From: {{ route.startPoint }}</p>
+        <p class="route-end">To: {{ route.endPoint }}</p>
+      </div>
+      <div class="col-xs-4">
+        <!-- <div class="stop-count">Number of stops: <br /> {{ route.wayPoints.length/2 }}</div> -->
+        <div class="stop-count">{{route.wayPoints.length/2}} stop<span ng-if="route.wayPoints.length > 2">s</span></div>
+      </div>
+      <div class="col-xs-4 centered">
+        <button class="saved-route-link btn" ng-click="viewSavedRoute(route.hash)">View this Route</button>
+        <button class="saved-route-link btn" ng-click="shareRoute(route.hash)">Share this route</button>
+        <button class="saved-route-link btn" ng-click="deleteRoute(route.hash)">Delete this route</button>
+      </div>
     </div>
   </div>
-</div>
-<!-- Saved routes -->
-<div class="col-xs-6 savedRoutes">
-  <h3 class="infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Popular Routes</h3>
-  <div class="row info save-routes" ng-repeat="route in popularRoutes">
-    <div class="col-xs-4">
-      <p class="route-start">From: {{ route.startPoint }}</p>
-      <p class="route-end">To: {{ route.endPoint }}</p>
-    </div>
-    <div class="col-xs-4">
-      <!-- <div class="stop-count">Number of stops: <br /> {{ route.wayPoints.length/2 }}</div> -->
-      <div class="stop-count">{{route.wayPoints.length/2}} stop<span ng-if="route.wayPoints.length > 2">s</span></div>
-    </div>
-    <div class="col-xs-4 centered">
-      <button class="saved-route-link btn" ng-click="viewPopularRoute(route.hash)">View this Route</button>
+  <!-- Saved routes -->
+  <div class="col-xs-6">
+    <h3 class="infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Popular Routes</h3>
+    <div class="row info save-routes" ng-repeat="route in popularRoutes">
+      <div class="col-xs-4">
+        <p class="route-start">From: {{ route.startPoint }}</p>
+        <p class="route-end">To: {{ route.endPoint }}</p>
+      </div>
+      <div class="col-xs-4">
+        <!-- <div class="stop-count">Number of stops: <br /> {{ route.wayPoints.length/2 }}</div> -->
+        <div class="stop-count">{{route.wayPoints.length/2}} stop<span ng-if="route.wayPoints.length > 2">s</span></div>
+      </div>
+      <div class="col-xs-4 centered">
+        <button class="saved-route-link btn" ng-click="viewPopularRoute(route.hash)">View this Route</button>
+      </div>
     </div>
   </div>
 </div>
