--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -61,7 +61,7 @@
       <p class="stop-address">{{place.location[1]}}, {{place.location[2]}}</p>
       <p class="stop-address">{{place.location[3]}}</p>
     </div>
-    <button class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
+    <button ng-show="places.length" class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
   </div>
 </div>
 
