--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -50,7 +50,7 @@
   <div class="col-xs-8">
     <div id="map"></div>
     <p>*Markers are draggable</p>
-    <a ui-sref="signin">*Sign in to save routes</a>
+    <a ng-show="!username" ui-sref="signin">*Sign in to save routes</a>
   </div>
   <!-- Stops -->
   <h3 class="col-xs-4 infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Your Stops</h3>
@@ -61,7 +61,7 @@
       <p class="stop-address">{{place.location[1]}}, {{place.location[2]}}</p>
       <p class="stop-address">{{place.location[3]}}</p>
     </div>
-    <button ng-show="places.length" class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
+    <button ng-show="places.length && username" class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
   </div>
 </div>
 
