--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -7,7 +7,9 @@
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li><a href="#" id="signout" ng-click="signout()">Sign Out</a></li>
+      <li><a ng-show="username" href="#" id="signout" ng-click="signout()">Sign Out</a></li>
+      <li><a ng-show="!username" ui-sref="signin">Sign In</a></li>
+      <li><a ng-show="!username" ui-sref="signup">Sign Up</a></li>
     </ul>
   </div>
   <h1 class="title col-xs-10">Thunder Routes</h1>
