--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -7,9 +7,9 @@
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li><a ng-show="username" href="#" id="signout" ng-click="signout()">Sign Out</a></li>
-      <li><a ng-show="!username" ui-sref="signin">Sign In</a></li>
-      <li><a ng-show="!username" ui-sref="signup">Sign Up</a></li>
+      <li><a ng-show="username.username" href="#" id="signout" ng-click="signout()">Sign Out</a></li>
+      <li><a ng-show="!username.username" ui-sref="signin">Sign In</a></li>
+      <li><a ng-show="!username.username" ui-sref="signup">Sign Up</a></li>
     </ul>
   </div>
   <h1 class="title col-xs-10">Thunder Routes</h1>
@@ -52,7 +52,7 @@
   <div class="col-xs-8">
     <div id="map"></div>
     <p>*Markers are draggable</p>
-    <a ng-show="!username" ui-sref="signin">*Sign in to save routes</a>
+    <a ng-show="!username.username" ui-sref="signin">*Sign in to save routes</a>
   </div>
   <!-- Stops -->
   <h3 class="col-xs-4 infoHeader"><i class="fa fa-caret-right fa-rotate-90" aria-hidden="true"></i>Your Stops</h3>
@@ -63,7 +63,7 @@
       <p class="stop-address">{{place.location[1]}}, {{place.location[2]}}</p>
       <p class="stop-address">{{place.location[3]}}</p>
     </div>
-    <button ng-show="places.length && username" class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
+    <button ng-show="places.length && username.username" class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
   </div>
 </div>
 
