--- a/client/auth/homepage.html
+++ b/client/auth/homepage.html
@@ -62,6 +62,20 @@
       <p class="stop-address">{{place.location[0]}}</p>
       <p class="stop-address">{{place.location[1]}}, {{place.location[2]}}</p>
       <p class="stop-address">{{place.location[3]}}</p>
+      <button ng-click='getLocation(place)'>Search Yelp Reviews</button>
+      <div class='review' ng-show='place.snippet || place.url || place.rating'>
+        <h4 class="text-center" ng-show='place.rating !== undefined'>{{place.rating}} Star<span ng-show='place.rating > 1'>s</span></h4>
+        <div ng-show='place.snippet !== undefined'>
+          <h4 class="text-center">Review snippet</h4>
+          <p>{{place.snippet}}</p>        
+        </div>
+        <div ng-show='place.url !== undefined'>
+          <a ng-href="{{place.url}}" target='_blank'>
+          {{place.name}} Yelp Page
+          </a>
+        </div>        
+      </div>
+
     </div>
     <button ng-show="places.length && username.username" class="routeBtn btn btn-block" ng-click="saveRouteComplete()">Save this route</button>
   </div>
