--- a/client/auth/signup.html
+++ b/client/auth/signup.html
@@ -12,7 +12,7 @@
       <li><a href="#" id="signout" ng-click="signout()">Sign Out</a></li>
     </ul>
   </div>
-  <h1 class="title col-xs-10">Thunder Routes</h1>
+  <h1 class="title col-xs-10">Thunder Road Trips</h1>
 </header>
 <div>
   <h1>Sign up</h1>
